--- a/escolha_comodo/selecionar_comodo.html
+++ b/escolha_comodo/selecionar_comodo.html
@@ -20,7 +20,7 @@
         <br>
         <div class='mensagem'>
             <div>
-            <img src="imagens/usuario.jpg">
+            <img src="">
             <h2><p>Olá, fulano! seja bem-vindo ao seu</p>
                 <p>espaço! escolha o que deseja fazer </p></h2>
 
@@ -29,7 +29,8 @@
         <div class='escolha'>
             <h3>Escolha seu comôdo:</h3>
             <div class='cozinha'>
-            <button class='bt1'>Cozinha</button>
+                <button class="btn btn-outline-success my-2 my-sm-0"
+                >Cozinha</button>
             </div>
             <div>
             <br>
