--- a/escolha_comodo/selecionar_comodo.html
+++ b/escolha_comodo/selecionar_comodo.html
@@ -12,8 +12,7 @@
 </head>
 <body>
     <form action="" method="get">
-        <div class='carossel'>
-        </div>
+       
         <div class='rascunho'>
             <button>Rascunhos</button>
         </div>
@@ -28,7 +27,7 @@
         
         <div class='escolha'>
             <h3>Escolha seu comôdo:</h3>
-            <div class='cozinha'>
+            <div class='btn1'>
                 <button class="btn btn-outline-success my-2 my-sm-0"
                 >Cozinha</button>
             </div>
