--- a/escolha_comodo/selecionar_comodo.html
+++ b/escolha_comodo/selecionar_comodo.html
@@ -27,9 +27,8 @@
         
         <div class='escolha'>
             <h3>Escolha seu comôdo:</h3>
-            <div class='btn1'>
-                <button class="btn btn-outline-success my-2 my-sm-0"
-                >Cozinha</button>
+            <div>
+                <button class='bt2'>Quartos</button>
             </div>
             <div>
             <br>
