--- a/escolha_comodo/selecionar_comodo.html
+++ b/escolha_comodo/selecionar_comodo.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>selecionar comôdo</title>
     <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet">
+    <href="lib/bootstrap-4.2.1-dist/css/bootstrap.min.css">
+    
 </head>
 <body>
     <form action="" method="get">
