--- a/cadastro/cadastro_usuario.html
+++ b/cadastro/cadastro_usuario.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA -Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ProjetoIntegrador</title>
+    <title>Projeto Integrador</title>
 </head>
 <body>
-    <h2>Cadastro de Usuarios</h2>
+    <h2>Cadastro de Usuários</h2>
     <hr>
     <form method="post" action="cadastro_usuario.php" enctype="multipart/form-data">
 <body>
@@ -15,7 +15,7 @@
         <table align="center">
            
             <tr>
-                <th colspan="2">Dados pessoais</th>
+                <th colspan="2">Dados Pessoais</th>
             </tr>
             <tr>
                 <td>
@@ -27,7 +27,7 @@
                 <td>
                     <p>Data de Nascimento:</p>
                 </td>
-                <td><input type="date" name="data_n"></td>
+                <td><input type="date" name="nascimento"></td>
             </tr>
             <tr>
                 <td>
