--- a/escolha_comodo/selecionar_comodo.html
+++ b/escolha_comodo/selecionar_comodo.html
@@ -26,7 +26,7 @@
         <div class='escolha'>
             <h3>Escolha seu comôdo:</h3>
             <div>
-                <button class='bt1'>Quartos</button>
+                <button type="button" class='btn btn-outline-quartos'>Quartos</button>
             </div>
             <div>
             <br>
