--- a/escolha_comodo/selecionar_comodo.html
+++ b/escolha_comodo/selecionar_comodo.html
@@ -26,13 +26,13 @@
         <div class='escolha'>
             <h3>Escolha seu comôdo:</h3>
             <div>
-                <button type="button" class='btn btn-outline-quartos'>Quartos</button>
+                <button type="button" class='btn btn-outline btn-lg'>Cozinha</button>
             </div>
             <div>
-            <br>
-            <button class='bt2'>Quartos</button>
+                <br>
+                <button type="button" class='btn btn-outline my-2 my-sm-0'>Quartos</button>
             </div>
-            <br>
+                <br>
             <div>
             <button class='bt3'>Banheiro</button>
             </div>
