--- a/cadastro/cadastro_usuario.html
+++ b/cadastro/cadastro_usuario.html
@@ -7,7 +7,7 @@
     <title>Projeto Integrador</title>
 </head>
 <body>
-    <h2>Cadastro de Usuários</h2>
+    <h2 align="center">Cadastro de Usuários</h2>
     <hr>
     <form method="post" action="cadastro_usuario.php" enctype="multipart/form-data">
 <body>
