--- a/escolha_comodo/selecionar_comodo.html
+++ b/escolha_comodo/selecionar_comodo.html
@@ -19,7 +19,7 @@
         <div class='mensagem'>
            
             <h2><p>Olá, fulano! seja bem-vindo ao seu</p>
-                <p>espaço! escolha o que deseja fazer </p></h2>
+                <p>espaço! Escolha o que deseja fazer </p></h2>
 
         </div>
         
@@ -34,7 +34,7 @@
             </div>
                 <br>
             <div>
-            <button class='bt3'>Banheiro</button>
+            <button type="button" class='btn btn-outline my-2 my-sm-0'>Banheiro</button>
             </div>
         </div>
     </form>
