--- a/escolha_comodo/selecionar_comodo.html
+++ b/escolha_comodo/selecionar_comodo.html
@@ -26,7 +26,7 @@
         <div class='escolha'>
             <h3>Escolha seu comôdo:</h3>
             <div>
-                <button type="button" class='btn btn-outline btn-lg'>Cozinha</button>
+                <button type="button" style='width:100;height:20' class='btn btn-outline btn-lg'>Cozinha</button>
             </div>
             <div>
                 <br>
