--- a/escolha_comodo/selecionar_comodo.html
+++ b/escolha_comodo/selecionar_comodo.html
@@ -13,7 +13,7 @@
 <body>
     <form action="" method="get">
         <div class='rascunho'>
-            <button>Rascunhos</button>
+            <button class="btn1">Rascunhos</button>
         </div>
         <br>
         <div class='mensagem'>
@@ -26,15 +26,15 @@
         <div class='escolha'>
             <h3>Escolha seu comôdo:</h3>
             <div>
-                <button type="button" style='width:100;height:20' class='btn btn-outline btn-lg'>Cozinha</button>
+                <button type="button" class="btn2">Cozinha</button>
             </div>
             <div>
                 <br>
-                <button type="button" class='btn btn-outline my-2 my-sm-0'>Quartos</button>
+                <button type="button" class="btn2">Quartos</button>
             </div>
                 <br>
             <div>
-            <button type="button" class='btn btn-outline my-2 my-sm-0'>Banheiro</button>
+                <button type="button" class="btn2">Banheiro</button>
             </div>
         </div>
     </form>
