--- a/escolha_comodo/selecionar_comodo.html
+++ b/escolha_comodo/selecionar_comodo.html
@@ -5,40 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>selecionar comôdo</title>
-    <link rel="stylesheet" href="estilo.css">
-    <link rel="stylesheet">
-    <href="lib/bootstrap-4.2.1-dist/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
 </head>
 <body>
     <form action="" method="get">
         <div class='rascunho'>
-            <button class="btn1">Rascunhos</button>
+            <img src="imagens/rascunhos.png" width="3%" style="margin-left: 95%; margin-top: 2%">
         </div>
         <br>
-        <div class='mensagem'>
+        <div class='mensagem' style="margin-top: 15%; margin-left: 15%;">
            
             <h2><p>Olá, fulano! seja bem-vindo ao seu</p>
                 <p>espaço! Escolha o que deseja fazer </p></h2>
 
         </div>
         
-        <div class='escolha'>
-            <h3>Escolha seu comôdo:</h3>
+        <div class='escolha' style="margin-left: 75%; margin-top: 1%; margin-bottom: 2%;">
+            <h4 style="text-align: left; ">Escolha seu comôdo:</h4>
             <div>
-                <button type="button" class="btn2">Cozinha</button>
+                <button type="button" class="btn btn-primary btn-lg" style="width: 200px; border-radius: 4px; 
+                border-color: black; background-color: grey;" >Cozinha</button>
             </div>
             <div>
                 <br>
-                <button type="button" class="btn2">Quartos</button>
+                <button type="button" class="btn btn-primary btn-lg" style="width: 200px; border-radius: 4px; 
+                border-color: black; background-color: grey;">Quarto</button>
             </div>
                 <br>
             <div>
-                <button type="button" class="btn2">Banheiro</button>
+                <button type="button" class="btn btn-primary btn-lg" style="width: 200px; border-radius: 4px; 
+                border-color: black; background-color: grey;">Banheiro</button>
             </div>
         </div>
     </form>
 
-     <script src="lib/bootstrap-4.2.1-dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
