--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="position: fixed;">
         <a class="navbar-brand" href="#">
         <img src="https://png.pngtree.com/png-vector/20200214/ourlarge/pngtree-wooden-chair-furniture-cartoon-for-room-interior-png-image_2146943.jpg" width="100" height="100" alt="">
         </a>
