--- a/selecionar_comodo.html
+++ b/selecionar_comodo.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>selecionar comôdo</title>
+    <title>Selecionar Comôdo</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <form action="" method="get">
         <div>
-            <h3>Escolha seu comôdo:</h3>
+            <h3>Escolha seu Comôdo:</h3>
             <button>Cozinha</button>
             <button>Quartos</button>
             <button>Banheiro</button>
