--- a/duvidas/duvidas.html
+++ b/duvidas/duvidas.html
@@ -13,11 +13,11 @@
     <form method="post" action="duvida.php">
         <h3>Perguntas Frequentes:</h3>
 
-       <p> <a href="pergunta1.html" target="_blank">Link com as duvidas mais frequentes</a></br>
-        <a href="pergunta2.html" target="_blank">Link com as duvidas mais frequentes</a></br>
-        <a href="pergunta3.html" target="_blank">Link com as duvidas mais frequentes</a></br>
-        <a href="pergunta4.html" target="_blank">Link com as duvidas mais frequentes</a></br>
-        <a href="pergunta5.html" target="_blank">Link com as duvidas mais frequentes</a></p>
+       <p> <a href="pergunta1.html" target="_blank">duvidas mais frequentes respondidas</a></br>
+        <a href="pergunta2.html" target="_blank">duvidas mais frequentes respondidas</a></br>
+        <a href="pergunta3.html" target="_blank">duvidas mais frequentes respondidas</a></br>
+        <a href="pergunta4.html" target="_blank">duvidas mais frequentes respondidas</a></br>
+        <a href="pergunta5.html" target="_blank">duvidas mais frequentes respondidas</a></p>
 
         <h3>Não achou o que estava procurando?</h3>
        </div>
