--- a/cadastro/cadastro_moveis.html
+++ b/cadastro/cadastro_moveis.html
@@ -27,7 +27,7 @@
                 <td>
                     <p>Cor:</p>
                 </td>
-                <td><input type="date" name="cor"></td>
+                <td><input type="text" name="cor"></td>
             </tr>
             <tr>
                 <td>
