--- a/escolha_comodo/selecionar_comodo.html
+++ b/escolha_comodo/selecionar_comodo.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
 </head>
-<body>
+<body style="background-image: url(https://img.freepik.com/premium-photo/white-wood-surface-table-texture-clean-wooden-panel_118047-4919.jpg?w=2000);">
     <form action="" method="get">
         <div class='rascunho'>
             <img src="imagens/rascunhos.png" width="3%" style="margin-left: 95%; margin-top: 2%">
@@ -25,21 +25,22 @@
             <h4 style="text-align: left; ">Escolha seu comôdo:</h4>
             <div>
                 <button type="button" class="btn btn-primary btn-lg" style="width: 200px; border-radius: 4px; 
-                border-color: black; background-color: grey;" >Cozinha</button>
+                border-color: black; background-color: #818779;" >Cozinha</button>
             </div>
             <div>
                 <br>
                 <button type="button" class="btn btn-primary btn-lg" style="width: 200px; border-radius: 4px; 
-                border-color: black; background-color: grey;">Quarto</button>
+                border-color: black; background-color: #818779;">Quarto</button>
             </div>
                 <br>
             <div>
                 <button type="button" class="btn btn-primary btn-lg" style="width: 200px; border-radius: 4px; 
-                border-color: black; background-color: grey;">Banheiro</button>
+                border-color: black; background-color: #818779;">Banheiro</button>
             </div>
         </div>
     </form>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+
 </body>
 </html>
