--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
             <li class="nav-item active">
               <a class="nav-link" href="#">Home <span class="sr-only"></span></a>
             </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="login_usuario.html">Login Google <span class="sr-only"></span></a>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Rascunhos</a>
             </li>
