--- a/escolha_comodo/selecionar_comodo.html
+++ b/escolha_comodo/selecionar_comodo.html
@@ -14,6 +14,9 @@
             <img src="imagens/rascunhos.png" width="3%" style="margin-left: 95%; margin-top: 2%">
         </div>
         <br>
+        <div>
+            
+        </div>
         <div class='mensagem' style="margin-top: 15%; margin-left: 15%;">
            
             <h2><p>Olá, fulano! seja bem-vindo ao seu</p>
@@ -25,17 +28,17 @@
             <h4 style="text-align: left; ">Escolha seu comôdo:</h4>
             <div>
                 <button type="button" class="btn btn-primary btn-lg" style="width: 200px; border-radius: 4px; 
-                border-color: black; background-color: #818779;" >Cozinha</button>
+                border-color: black; background-image: url(https://img.freepik.com/free-photo/brown-wooden-textured-flooring-background_53876-104666.jpg?w=2000);" >Cozinha</button>
             </div>
             <div>
                 <br>
                 <button type="button" class="btn btn-primary btn-lg" style="width: 200px; border-radius: 4px; 
-                border-color: black; background-color: #818779;">Quarto</button>
+                border-color: black; background-image: url(https://img.freepik.com/free-photo/brown-wooden-textured-flooring-background_53876-104666.jpg?w=2000);;">Quarto</button>
             </div>
                 <br>
             <div>
                 <button type="button" class="btn btn-primary btn-lg" style="width: 200px; border-radius: 4px; 
-                border-color: black; background-color: #818779;">Banheiro</button>
+                border-color: black; background-image: url(https://img.freepik.com/free-photo/brown-wooden-textured-flooring-background_53876-104666.jpg?w=2000);;">Banheiro</button>
             </div>
         </div>
     </form>
