--- a/cadastro/cadastro_usuario.html
+++ b/cadastro/cadastro_usuario.html
@@ -10,7 +10,7 @@
     <h2 align="center">Cadastro de Usuários</h2>
     <hr>
     <form method="post" action="cadastro_usuario.php" enctype="multipart/form-data">
-<body>
+<body class="cssdocadastro" >
     <form action="cadastro_usuario.php" method="post" enctype='multipart/form-data'>
         <table align="center">
            
@@ -138,6 +138,12 @@
             </div>
         </table>
     </form>
+<style>
+    #cssdocadastro{
+        background-color: #c3b2aa;
+
+    }
+</style>
 </body>
  
 </html>
