--- a/cadastro/cadastro_moveis.html
+++ b/cadastro/cadastro_moveis.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA -Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ProjetoIntegrador</title>
+    <link rel="stylesheet" type="text/css" href="estilo.css">
+    <title>Projeto Integrador</title>
 </head>
 <body>
     <h2>Cadastro de Móveis</h2>
