--- a/escolha_comodo/selecionar_comodo.html
+++ b/escolha_comodo/selecionar_comodo.html
@@ -9,6 +9,34 @@
 
 </head>
 <body style="background-image: url(https://img.freepik.com/premium-photo/white-wood-surface-table-texture-clean-wooden-panel_118047-4919.jpg?w=2000);">
+    <!--
+    <div class="subcabecalho" style="background-color: #c3b2aa; font-family: Open-Sans; float: left; font-size: 20px; color: white; text-align: center;  padding: 14px 16px; text-decoration: none;">
+        <div class="cabecalhogeral">
+          <button class="cabecalhotres">Login</button>
+          <div class="cabecalhogeral-content">
+            <a href="cadastro_usuario.html">Cadastrar</a>
+            <a href="">Entrar</a>
+          </div>
+        </div> 
+      
+        <div class="cabecalhogeral" style="display: contents; float: left; overflow: hidden;">
+          <button class="cabecalhotres">Nossos Contatos</button>
+          <div class="cabecalhogeral-content">
+            <a href="#instagram">Instagram</a>
+            <a href="#facebook">Facebook</a>
+            <a href="#whatsapp">Whatsapp</a>
+            <a href="#telefoneligar">Telefone</a>
+          </div>
+        </div> 
+      
+        <div class="cabecalhogeral">
+          <button class="cabecalhotres">Quem Somos</button>
+          <div class="cabecalhogeral-content">
+            <a href="#quemsomos"></a>
+          </div>
+        </div>
+      </div>
+    -->
     <form action="" method="get">
         <div class='rascunho'>
             <img src="imagens/rascunhos.png" width="3%" style="margin-left: 95%; margin-top: 2%">
