--- a/rascunho/rascunho.html
+++ b/rascunho/rascunho.html
@@ -60,7 +60,7 @@
                                     <h4>Clique em um rascunho</h4></th>
                                 <tr>
                                     <td>Cômoda <br> 
-                                        <a href="detalhecomoda.html"><img src = "../rascunho/img/comoda.jpg" widht="100" height="100"></a>
+                                        <a href="detalhe_comoda.html"><img src = "../rascunho/img/comoda.jpg" widht="100" height="100"></a>
                                        </td>
                                     <td>Poltrona <br>
                                         <a href="poltrona.html"><img src = "../rascunho/img/poltrona.jpg" widht="100" height="100"></a></td>
