--- a/paleta/index.html
+++ b/paleta/index.html
@@ -8,21 +8,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main class="container">
-        <div class="colors" id="color-1">
-            <p id="txt-color-1">#FFFFFF</p>
-        </div>
-        <div class="colors" id="color-2">
-            <p id="txt-color-2">#FFFFFF</p>
-        </div>
-        <div class="colors" id="color-3">
-            <p id="txt-color-3">#FFFFFF</p>
-        </div>
-        <div class="colors" id="color-4">
-            <p id="txt-color-4">#FFFFFF</p>
-        </div>
-        <div class="colors" id="color-5">
-            <p id="txt-color-5">#FFFFFF</p>
+    <main>
+        <div class="container">
+            <!--<div align="center">
+                <h1>PALETA DE CORES</h1>
+            </div>-->
+            <div class="colors" id="color-1">
+                <p id="txt-color-1">#FFFFFF</p>
+            </div>
+            <div class="colors" id="color-2">
+                <p id="txt-color-2">#FFFFFF</p>
+            </div>
+            <div class="colors" id="color-3">
+                <p id="txt-color-3">#FFFFFF</p>
+            </div>
+            <div class="colors" id="color-4">
+                <p id="txt-color-4">#FFFFFF</p>
+            </div>
+            <div class="colors" id="color-5">
+                <p id="txt-color-5">#FFFFFF</p>
+            </div>
         </div>
 
         <input class="btn" type="button" value="Mudar de cor" 
