--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <a class="nav-link" href="login_usuario.html">Login Google <span class="sr-only"></span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Rascunhos</a>
+              <a class="nav-link" href="rascunho/rascunho.html">Rascunhos</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Avaliação</a>
