--- a/escolha_comodo/selecionar_comodo.html
+++ b/escolha_comodo/selecionar_comodo.html
@@ -37,6 +37,7 @@
         </div>
       </div>
     -->
+  <div class="areaFormulario" style="background-color: #818779; position: fixed; width: 60%; top: 200px; left: 20%;"> 
     <form action="" method="get">
         <div class='rascunho'>
             <img src="imagens/rascunhos.png" width="3%" style="margin-left: 95%; margin-top: 2%">
@@ -70,7 +71,7 @@
             </div>
         </div>
     </form>
-
+  </div>>
     <div class="row">
         <div class="col-md-12">
             <?php include "includes/rodape.php";?>
