--- a/css/estilo.html
+++ b/css/estilo.html
@@ -143,12 +143,25 @@ body {
       </div>
 
       <div class="item">
-        <img src="movelum.jpg" alt="Chicago" style="width:100%;">
+        <img src="imagens_carrossel/1.png" alt="Chicago" style="width:100%;">
       </div>
     
       <div class="item">
-        <img src="moveldois.png" alt="New york" style="width:100%;">
+        <img src="imagens_carrossel/2.png" alt="New york" style="width:100%;">
       </div>
+
+      <div class="item">
+        <img src="imagens_carrossel/3.png" alt="New york" style="width:100%;">
+      </div>
+
+      <div class="item">
+        <img src="imagens_carrossel/4.png" alt="New york" style="width:100%;">
+      </div>
+
+      <div class="item">
+        <img src="imagens_carrossel/5.png" alt="New york" style="width:100%;">
+      </div>
+
     </div>
 
     <!-- Left and right controls -->
