--- a/paleta/index.html
+++ b/paleta/index.html
@@ -9,10 +9,12 @@
 </head>
 <body>
     <main>
+        
+        <div align="center">
+            <h1>PALETA DE CORES</h1>
+        </div>
+        
         <div class="container">
-            <!--<div align="center">
-                <h1>PALETA DE CORES</h1>
-            </div>-->
             <div class="colors" id="color-1">
                 <p id="txt-color-1">#FFFFFF</p>
             </div>
