--- a/css/estilo.html
+++ b/css/estilo.html
@@ -138,7 +138,7 @@ body {
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
       <div class="item active">
-        <img src="logocanva.png" alt="Los Angeles" style="width:100%;">
+        <img src="imagens_carrossel/logo.png" alt="Los Angeles" style="width:100%;">
 
       </div>
 
