--- a/cadastro/cadastro_moveis.html
+++ b/cadastro/cadastro_moveis.html
@@ -8,7 +8,7 @@
     <title>Projeto Integrador</title>
 </head>
 <body>
-    <h2>Cadastro de Móveis</h2>
+    <h2 align="center">Cadastro de Móveis</h2>
     <hr>
     <form method="post" action="cadastro_moveis.php" enctype="multipart/form-data">
 <body>
@@ -59,7 +59,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>Quantidade Disponivel:</p>
+                    <p>Quantidade Disponível:</p>
                 </td>
                 <td><input type="text" name="quantidade" id="quantidade" ></td>
             </tr>
