--- a/duvidas/duvidas.html
+++ b/duvidas/duvidas.html
@@ -25,6 +25,9 @@
        <div align="center">
         <label for="observacao">deixe aqui sua duvida que entraremos em contato assim que possivel:</label>
         <input name="observacao" type="text" size="100">
+    </tr>           
+    <td colspan="2"><br><input type="submit" value="Cadastrar Móvel"></td>
+</tr>
     </div>
 
     </form>
