--- a/duvidas/duvidas.html
+++ b/duvidas/duvidas.html
@@ -26,7 +26,7 @@
         <label for="observacao">deixe aqui sua duvida que entraremos em contato assim que possivel:</label>
         <input name="observacao" type="text" size="100">
     </tr>           
-    <td colspan="2"><br><input type="submit" value="Cadastrar Móvel"></td>
+    <td colspan="2"><br><input type="submit" value="Enviar dúvida"></td>
 </tr>
     </div>
 
