--- a/quemsomos.html
+++ b/quemsomos.html
@@ -11,11 +11,11 @@
     <h1> QUEM SOMOS?</h1>
     Sejam bem vindos ao site WOOD DESIGNER! O site criado para você cliente, personalizar o seu móvel da maneira que você 
     se sentir confortável e da maneira que se adeque a sua casa.<br>
-    O objetivo dessa plataforma é ajudar e facilitar a vida de quem pretende imobiliar seu imóvel, não precisando pagar por
+    O objetivo dessa plataforma é ajudar e facilitar a vida de quem pretende mobiliar seu imóvel, não precisando pagar por
     um arquiteto ou até mesmo por um designer de interiores. Além disso, temos a opção de encomendar os móveis desejados.<br>
     Em época de pandemia, as pessoas não podiam sair de suas casas para realizar suas compras, então outro intuito do nosso
-    projeto seria fornecer a oportunidade para tais indivíduos adquirir seus produtos sem se locomover. <BR><BR>
-    O desenvolvimento desse site foi realizado pelas alunas e aluno do Instituto Federal de São Paulo, Câmpus Birigui para a conclusão de 
+    projeto seria fornecer a oportunidade para tais indivíduos adquirirem seus produtos sem se locomover. <BR><BR>
+    O desenvolvimento desse site foi realizado pelas alunas e aluno do Instituto Federal de São Paulo, Campus Birigui para a conclusão de 
     curso do ensino médio:
     
     <br><br>Ana Maria Cezario Clementino<br>
